--- a/index.html
+++ b/index.html
@@ -25,8 +25,24 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/favicon-192.png">
     <link rel="manifest" href="manifest.json">
 </head>
-<body
->
+<body>
+    <noscript>
+        <style type="text/css">
+          [data-sal|='fade'] {
+            opacity: 1;
+          }
+      
+          [data-sal|='slide'],
+          [data-sal|='zoom'] {
+            opacity: 1;
+            transform: none;
+          }
+      
+          [data-sal|='flip'] {
+            transform: none;
+          }
+        </style>
+      </noscript>      
 <!-- SVG Symbols -->
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true"
     style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1">
@@ -139,7 +155,7 @@
                 <div class="swiper-slide">
                     <div class="player__info">
                         <figure class="player__image">
-                            <img src="assets/players/player-1.png" alt="Player">
+                            <img src="assets/players/player-1.png" alt="Player" loading="lazy">
                         </figure>
                         <div class="player__basics">
                             <p class="player__name">Sergey Bogoslovskiy</p>
@@ -156,7 +172,7 @@
                 <div class="swiper-slide">
                     <div class="player__info">
                         <figure class="player__image">
-                            <img src="assets/players/player-1.png" alt="Player">
+                            <img src="assets/players/player-1.png" alt="Player" loading="lazy">
                         </figure>
                         <div class="player__basics">
                             <p class="player__name">Sergey Bogoslovskiy</p>
@@ -173,7 +189,7 @@
                 <div class="swiper-slide">
                     <div class="player__info">
                         <figure class="player__image">
-                            <img src="assets/players/player-1.png" alt="Player">
+                            <img src="assets/players/player-1.png" alt="Player" loading="lazy">
                         </figure>
                         <div class="player__basics">
                             <p class="player__name">Sergey Bogoslovskiy</p>
@@ -221,10 +237,18 @@
                 <span class="revenue__multiplier" data-sal="fade" data-sal-delay="100" style="--sal-duration: 400ms;">x</span>
                 <div class="revenue__chart-wrapper">
                     <figure class="revenue__rocket">
-                        <img src="assets/rocket_3x.png" alt="Rocket" class="rocket">
+                        <img src="assets/rocket_3x.png" alt="Rocket" loading="lazy" class="rocket">
                     </figure>
                     <div class="revenue__chart chart">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1190 802" id="revenue-chart"><defs><linearGradient id="chart-area" x1="26.24" y1="414.26" x2="1167.24" y2="414.26" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#2262ff" stop-opacity="0"/><stop offset="0.1" stop-color="#2262ff" stop-opacity="0.2"/><stop offset="0.24" stop-color="#2262ff" stop-opacity="0.4"/><stop offset="0.37" stop-color="#2262ff" stop-opacity="0.6"/><stop offset="0.5" stop-color="#2262ff" stop-opacity="0.74"/><stop offset="0.63" stop-color="#2262ff" stop-opacity="0.85"/><stop offset="0.75" stop-color="#2262ff" stop-opacity="0.93"/><stop offset="0.88" stop-color="#2262ff" stop-opacity="0.98"/><stop offset="1" stop-color="#2262ff"/></linearGradient><linearGradient id="chart-line" x1="22" y1="404" x2="1171.65" y2="404" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#ff5454"/><stop offset="0.5" stop-color="#ff7e44"/><stop offset="1" stop-color="#ffc544"/></linearGradient></defs><path class="chat-area" d="M26.24,780.08l83.81-7.43,84-11.48,76.36-7.63,168-45.82,78.2-26.45L675.1,608.46l168-99.27,84-38.18,76.35-68.72,84-145.08,79.81-227.13V798.39l-1141,.06Z"/><polyline class="chart-line" points="25.83 779.92 109.83 772.54 193.82 761.07 270.18 753.43 438.17 707.62 516.37 681.17 674.87 608.36 842.86 509.09 926.85 470.91 1003.21 402.19 1087.2 257.11 1167.65 28.04"/><line class="chart-vertical-line" x1="26" y1="780" x2="26" y2="799"/><text class="chart-emoji">🤟</text><line class="chart-vertical-line" x1="189" y1="761" x2="189" y2="799"/><text class="chart-emoji">🤟</text><line class="chart-vertical-line" x1="352" y1="731" x2="352" y2="799"/><text class="chart-emoji">🤟</text><line class="chart-vertical-line" x1="515" y1="681" x2="515" y2="799"/><text class="chart-emoji">🤟</text><line class="chart-vertical-line" x1="678" y1="605" x2="678" y2="799"/><text class="chart-emoji">🤟</text><line class="chart-vertical-line" x1="841" y1="510" x2="841" y2="799"/><text class="chart-emoji">🤟</text><line class="chart-vertical-line" x1="1004" y1="400" x2="1004" y2="799"/><text class="chart-emoji">🤟</text><line class="chart-vertical-line" x1="1167" y1="30" x2="1167" y2="799"/><text class="chart-emoji">🤟</text></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1190 802" id="revenue-chart"><defs><linearGradient id="chart-area" x1="26.24" y1="414.26" x2="1167.24" y2="414.26" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#2262ff" stop-opacity="0"/><stop offset="0.1" stop-color="#2262ff" stop-opacity="0.2"/><stop offset="0.24" stop-color="#2262ff" stop-opacity="0.4"/><stop offset="0.37" stop-color="#2262ff" stop-opacity="0.6"/><stop offset="0.5" stop-color="#2262ff" stop-opacity="0.74"/><stop offset="0.63" stop-color="#2262ff" stop-opacity="0.85"/><stop offset="0.75" stop-color="#2262ff" stop-opacity="0.93"/><stop offset="0.88" stop-color="#2262ff" stop-opacity="0.98"/><stop offset="1" stop-color="#2262ff"/></linearGradient><linearGradient id="chart-line" x1="22" y1="404" x2="1171.65" y2="404" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#ff5454"/><stop offset="0.5" stop-color="#ff7e44"/><stop offset="1" stop-color="#ffc544"/></linearGradient></defs><path class="chat-area" d="M26.24,780.08l83.81-7.43,84-11.48,76.36-7.63,168-45.82,78.2-26.45L675.1,608.46l168-99.27,84-38.18,76.35-68.72,84-145.08,79.81-227.13V798.39l-1141,.06Z"/><polyline class="chart-line" points="25.83 779.92 109.83 772.54 193.82 761.07 270.18 753.43 438.17 707.62 516.37 681.17 674.87 608.36 842.86 509.09 926.85 470.91 1003.21 402.19 1087.2 257.11 1167.65 28.04"/><line class="chart-vertical-line" x1="26" y1="780" x2="26" y2="799"/>
+                            <text class="chart-emoji">🤞</text><line class="chart-vertical-line" x1="189" y1="761" x2="189" y2="799"/>
+                            <text class="chart-emoji">😌</text><line class="chart-vertical-line" x1="352" y1="731" x2="352" y2="799"/>
+                            <text class="chart-emoji">👍</text><line class="chart-vertical-line" x1="515" y1="681" x2="515" y2="799"/>
+                            <text class="chart-emoji">🤭</text><line class="chart-vertical-line" x1="678" y1="605" x2="678" y2="799"/>
+                            <text class="chart-emoji">👊</text><line class="chart-vertical-line" x1="841" y1="510" x2="841" y2="799"/>
+                            <text class="chart-emoji">😋</text><line class="chart-vertical-line" x1="1004" y1="400" x2="1004" y2="799"/>
+                            <text class="chart-emoji">🤟</text><line class="chart-vertical-line" x1="1167" y1="30" x2="1167" y2="799"/>
+                            <text class="chart-emoji">😎</text></svg>
                         <div class="chart__legend">
                             <span class="legend-item">MAR 20’</span>
                             <span class="legend-item">MAY 20’</span>
@@ -300,7 +324,7 @@
                 <button class="quote-button button button-primary">Send resume</button>
             </div>
             <figure class="jobs__image-wrapper">
-                <img src="assets/team.jpg" alt="our team" class="jobs__image">
+                <img src="assets/team.jpg" alt="our team" loading="lazy" class="jobs__image">
             </figure>
         </div>
     </section>
