added gallery content

--- a/index.html
+++ b/index.html
@@ -305,28 +305,98 @@
         <div class="wrapper">
             <div class="swiper-container gallery__container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide gallery__slide gallery__slide">
-                        <figure class="gallery__image">
-                            <img src="assets/gallery/team.jpg" alt="team photo" loading="lazy">
-                        </figure>
-                    </div>
-                    <div class="swiper-slide gallery__slide gallery__slide">
+                    <div class="swiper-slide gallery__slide">
                         <figure class="gallery__image">
                             <img src="assets/gallery/1.jpg" alt="team photo" loading="lazy">
-                        </figure>
-                    </div>
-                </div>
-            </div>
-        <div thumbsSlider="" class="swiper-container gallery__thumb">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide gallery__slide gallery__slide">
-                        <figure class="gallery__image">
-                            <img src="assets/gallery/team.jpg" alt="team photo" loading="lazy">
                         </figure>
                     </div>
                     <div class="swiper-slide gallery__slide">
                         <figure class="gallery__image">
+                            <img src="assets/gallery/2.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/3.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/4.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/5.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/6.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/7.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/8.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/9.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        <div class="swiper-container gallery__thumb">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
                             <img src="assets/gallery/1.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/2.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/3.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/4.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/5.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/6.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/7.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/8.jpg" alt="team photo" loading="lazy">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide gallery__slide">
+                        <figure class="gallery__image">
+                            <img src="assets/gallery/9.jpg" alt="team photo" loading="lazy">
                         </figure>
                     </div>
                 </div>
