iphone 12 animation bug

--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                     <svg class="jobs-list__pic">
                         <use xlink:href="#pic-fire"></use>
                     </svg>
-                    <h4 class="jobs-list__heading heading-4 heading-color">Product manager</h4>
-                    <p class="jobs-list__description">Create cool features that change the World and make customers fall in love</p>
+                    <h4 class="jobs-list__heading heading-4 heading-color">Marketing Manager</h4>
+                    <p class="jobs-list__description">Develop strategies of investing mln. of dollars in paid acquisition</p>
                     <a href="https://t.me/mxplp" target="_blank" class="jobs-list__button button button-secondary">Apply position
                         <svg class="svg-icon button-icon">
                             <use xlink:href="#icon-arrow-right"></use>
@@ -257,7 +257,7 @@
                     <svg class="jobs-list__pic">
                         <use xlink:href="#pic-fire"></use>
                     </svg>
-                    <h4 class="jobs-list__heading heading-4 heading-color">Junior analyst</h4>
+                    <h4 class="jobs-list__heading heading-4 heading-color">Junior Analyst</h4>
                     <p class="jobs-list__description">Artificial Intelligence, Big Data sets and forecasting for business acceleration</p>
                     <a href="https://t.me/mxplp" target="_blank" class="jobs-list__button button button-secondary">Apply position
                         <svg class="svg-icon button-icon">
@@ -269,8 +269,8 @@
                     <svg class="jobs-list__pic">
                         <use xlink:href="#pic-fire"></use>
                     </svg>
-                    <h4 class="jobs-list__heading heading-4 heading-color">Business development</h4>
-                    <p class="jobs-list__description">Work with multi cultures and partners all over the World</p>
+                    <h4 class="jobs-list__heading heading-4 heading-color">Product Manager</h4>
+                    <p class="jobs-list__description">Create cool features that change the World and make customers fall in love</p>
                     <a href="https://t.me/mxplp" target="_blank" class="jobs-list__button button button-secondary">Apply position
                         <svg class="svg-icon button-icon">
                             <use xlink:href="#icon-arrow-right"></use>
@@ -281,7 +281,7 @@
                     <svg class="jobs-list__pic">
                         <use xlink:href="#pic-fire"></use>
                     </svg>
-                    <h4 class="jobs-list__heading heading-4 heading-color">Support team lead</h4>
+                    <h4 class="jobs-list__heading heading-4 heading-color">Support Team Lead</h4>
                     <p class="jobs-list__description">Empathise our Customers with smooth service and fast solutions</p>
                     <a href="https://t.me/mxplp" target="_blank" class="jobs-list__button button button-secondary">Apply position
                         <svg class="svg-icon button-icon">
