--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <section class="players" id="players">
     <div class="players__wrapper wrapper">
         <h2 class="players__heading heading-2" data-sal="slide-up">We acquired <span class="highlight nowrap">A-Players</span> from legendary brands</h2>
-        <div class="players__companies" data-sal="flip-up">
+        <div class="players__companies" data-sal="slide-up">
             <img src="assets/logo/logo-google.svg" alt="Google" class="players__logo">
             <img src="assets/logo/logo-civitta.svg" alt="Civitta" class="players__logo">
             <img src="assets/logo/logo-preply.svg" alt="Preply" class="players__logo">
