swiper cdn change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#171a21"/>
     <meta name="description" content="Evercon develop outstanding Customer-centric platforms in social discovery niche">
     <title>Evercon</title>
-    <link href="https://unpkg.com/swiper/swiper.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.2/swiper-bundle.min.css" rel="stylesheet" >
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600&display=swap" rel="stylesheet" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16.png">
@@ -160,12 +160,12 @@
     
             </div>
             <div class="swiper-nav-wrapper">
-                <div class="swiper-button-prev slider-button">
+                <div class="slider-button">
                     <svg class="slider-button__icon svg-icon">
                         <use xlink:href="#icon-arrow-angle-left"></use>
                     </svg>
                 </div>
-                <div class="swiper-button-next slider-button">
+                <div class="slider-button">
                     <svg class="slider-button__icon svg-icon">
                         <use xlink:href="#icon-arrow-angle-right"></use>
                     </svg>
@@ -310,7 +310,7 @@
         </div>
     </footer>
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.2/swiper-bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.13/lottie_canvas.min.js"></script>
