ios video autoplay fix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!-- Hero Section -->
     <section class="hero" id="hero">
 
-        <video src="assets/cover/evercon-cover-4K.mp4" poster="assets/cover/evercon-cover-poster-4K.jpg" autoplay="autoplay" muted="muted" loop="loop" class="hero__video"></video>
+        <video src="assets/cover/evercon-cover-4K.mp4" poster="assets/cover/evercon-cover-poster-4K.jpg" autoplay="autoplay" muted="muted" loop="loop" playsinline class="hero__video"></video>
         <div class="hero__fade">
             <svg class="hero-fade__icon svg-icon">
                 <use xlink:href="#icon-mouse"></use>
