--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#171a21"/>
+    <meta name="theme-color" content="#171a21">
+    <meta name="keywords" content="Evercon, IT company, team">
     <meta name="description" content="Evercon develop outstanding Customer-centric platforms in social discovery niche">
     <title>Evercon</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.2/swiper-bundle.min.css" rel="stylesheet" >
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.2/swiper-bundle.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32.png">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/favicon-57.png">
@@ -88,7 +89,7 @@
             </nav>
 
             <div class="hero__content">
-                <h2 class="hero__heading heading-2">Creating world IT products for millions of users</h2>
+                <h1 class="hero__heading heading-2">Creating world IT products for millions of users</h1>
                 <p class="hero__description description">We develop outstanding Customer-centric platforms in social discovery niche</p>
                 <a href="https://t.me/mxplp" rel="nofollow noopener" target="_blank" class="hero__button button button-primary">Join our team!</a>
             </div>
