--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Evercon, IT company, team">
     <meta name="description" content="Evercon develop outstanding Customer-centric platforms in social discovery niche">
     <title>Evercon</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.2/swiper-bundle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.2/swiper-bundle.min.css" integrity="sha512-1ZM9++EEWCI4FIka51v5J4pmmbNOCj3W4puKRM6L2OyKtg/W/rYCshwZ3W55y3Lks1zR8/wpY8ghKcrj356KNQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16.png">
@@ -132,11 +132,11 @@
     <div class="players__wrapper wrapper anim-slide-up">
         <h2 class="players__heading heading-2">We acquired <span class="highlight nowrap">A-Players</span> from legendary brands</h2>
         <div class="players__companies">
-            <img src="assets/logo/logo-google.svg" alt="Google" class="players__logo">
-            <img src="assets/logo/logo-civitta.svg" alt="Civitta" class="players__logo">
-            <img src="assets/logo/logo-preply.svg" alt="Preply" class="players__logo">
-            <img src="assets/logo/logo-pwc.svg" alt="PWC" class="players__logo">
-            <img src="assets/logo/logo-microsoft.svg" alt="Microsoft" class="players__logo">
+            <img src="assets/logo/logo-google.svg" width="122" height="40" alt="Google" class="players__logo">
+            <img src="assets/logo/logo-civitta.svg"  width="154" height="32" alt="Civitta" class="players__logo">
+            <img src="assets/logo/logo-preply.svg" width="147" height="40" alt="Preply" class="players__logo">
+            <img src="assets/logo/logo-pwc.svg" width="64" height="48" alt="PWC" class="players__logo">
+            <img src="assets/logo/logo-microsoft.svg" width="188" height="40" alt="Microsoft" class="players__logo">
         </div>
     </div>
 
@@ -148,7 +148,7 @@
                     <div class="swiper-slide">
                         <div class="player__info">
                         <figure class="player__image" data-swiper-parallax="-300">
-                            <img class="player__photo" src="" alt="Player" loading="lazy">
+                            <img src="" width="378" height="783" class="player__photo" alt="Player" loading="lazy">
                         </figure>
                         <div class="player__basics">
                             <p class="player__name"></p>
@@ -161,12 +161,12 @@
     
             </div>
             <div class="swiper-nav-wrapper">
-                <div class="slider-button">
+                <div class="slider-button slider-button-prv">
                     <svg class="slider-button__icon svg-icon">
                         <use xlink:href="#icon-arrow-angle-left"></use>
                     </svg>
                 </div>
-                <div class="slider-button">
+                <div class="slider-button slider-button-nxt">
                     <svg class="slider-button__icon svg-icon">
                         <use xlink:href="#icon-arrow-angle-right"></use>
                     </svg>
@@ -257,7 +257,7 @@
                     <template id="gallery-photos">
                         <div class="swiper-slide gallery__slide">
                             <figure class="gallery__image">
-                                <img src="" class="gallery__photo" alt="team photo">
+                                <img src="" class="gallery__photo" alt="team photo" loading="lazy">
                             </figure>
                         </div>
                     </template>
@@ -311,11 +311,11 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.2/swiper-bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.13/lottie_canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.5/swiper-bundle.min.js" integrity="sha512-QiBicDZzj0dLDxaV5d0iLTSmtSJcf4dR2Z2uGMqxOMqKm6FBM7AaY0vS1Cq6EbAn7I9i0oDnEZO4J75zeHuVBg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js" integrity="sha512-DlTk2PLUinhBupE89kHOJTt11QqbRMQVlbb26XVDvp4D1kt0fRvQJslvZnTelRJHq6yK0tIPCR7cul8+9Blz0g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.13/lottie_canvas.min.js" integrity="sha512-F2ID5KyOBTuJTCmXB5jr+k7PNN+Gv5C939TeGBoor4GdqemzAbGrLL5EheogK1Aw1pERWezpbHwBDWbi/2ltgQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/animation.js"></script>
 
 </body>
